feat: end: getSomeoneArticle
